# Arduino_Auto_Chicken_Coop

./: README.md
chicken_coop/: AlI_in_One_Main.cpp  All_in_One_Main.cpp  CMakeLists.txt  Consistent_Light_Controller.cpp  Coop_Door_Controller.cpp  Coop_Humidity_Control.cpp  Dispense_Food_Water.cpp  chicken_light_controller.cpp  detect_egg_and_weigh.cpp  door_controller.cpp  humidity_monitor.cpp  main.cpp  table_generator.cpp  table_generator.h  temp_controller.cpp
